--- a/app/data/build.gradle
+++ b/app/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -8,6 +9,14 @@ android {
     defaultConfig {
         minSdkVersion minSdkValue
         targetSdkVersion compileSdkValue
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
+        }
     }
     compileOptions {
         sourceCompatibility jvmVersionValue
@@ -19,4 +28,9 @@ android {
 dependencies {
     api project(":app:api")
     api 'com.google.android.gms:play-services-location:18.0.0'
+
+    // Database
+    api "androidx.room:room-runtime:$room_version"
+    api "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 }
